test/tests/ImplementClass.expected
ImplementClass.panda:4:1: error: class 'NotIntf' is not an interface
1 error
