test/tests/ImplementClass.panda
class NotIntf {
}

class ImplementClass (NotIntf) {
}